[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bpe"]

[project]
name = "bpe-vitaldb"
version = "0.1.0"
description = "Blood pressure estimation from PPG using VitalDB and PyTorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=1.26",
    "scipy>=1.11",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.3",
    "vitaldb>=1.6.4",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
